--- a/my-world.html
+++ b/my-world.html
@@ -9,9 +9,9 @@
 
 	<link rel="stylesheet" href="./css/style.min.css">
 </head>
+
 <body>
-	
-	<body>
+
 		<div class="progressbar">
 	<div class="progressbar-line"></div>
 </div>
@@ -22,7 +22,7 @@
 	<nav class="nav">
 		<div class="logo">
 			<button class="logo-btn circle-btn logo-btn-back">
-				<p class="logo-text">VI</p>
+				<span	class="logo-text">VI</span>
 				<span class="span-arrow">
 					<svg class="btn-svg btn-svg-arrow" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path>
@@ -79,6 +79,23 @@
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18 3a3 3 0 0 0-3 3v12a3 3 0 0 0 3 3 3 3 0 0 0 3-3 3 3 0 0 0-3-3H6a3 3 0 0 0-3 3 3 3 0 0 0 3 3 3 3 0 0 0 3-3V6a3 3 0 0 0-3-3 3 3 0 0 0-3 3 3 3 0 0 0 3 3h12a3 3 0 0 0 3-3 3 3 0 0 0-3-3z"></path>
 				</svg>
 			</button>	
+			<!-- <div class="modal">
+				<div class="modal__inner">
+					<div class="modal-input">
+						<input class="modal-input__search" type="text" placeholder="Search...">
+					</div>
+					<div class="modal-items">
+						<div class="modal-item active">
+							<span class="modal-item__text ">Home</span>
+							<div class="modal-item__btn">h</div>
+						</div>
+						<div class="modal-item">
+							<span class="modal-item__text">Work</span>
+							<div class="modal-item__btn">w</div>
+						</div>
+					</div>
+				</div>
+			</div> -->
 		</div>
 	</nav>
 </header>
@@ -108,7 +125,7 @@
 						<div class="content-interested__content">
 							<h3 class="content-interested__title">Web Developer</h3>
 							<p class="content-interested__text">I am developing in the direction of web development. From simple landing pages to online stores and mobile applications. When creating a product, modern development and optimization tools are used.</p>
-							<a class="content-interested__link" href="#">
+							<a class="content-interested__link" href="/work.html">
 								<p class="content-interested__link-text">View projects
 									<span class="content-interested__link-svg">
 										<svg fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="4" d="M9 5l7 7-7 7"></path></svg>
@@ -138,13 +155,13 @@
 						<div class="content-interested__content">
 							<h3 class="content-interested__title">Thinking out loud</h3>
 							<p class="content-interested__text">Just me rambling about stuff. My first personal blog after years of using the internet. Is blogging already a vintage thing to do?!</p>
-							<a class="content-interested__link" href="#">
+							<!-- <a class="content-interested__link" href="#">
 								<p class="content-interested__link-text">Explore my brain
 									<span class="content-interested__link-svg">
 										<svg fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="4" d="M9 5l7 7-7 7"></path></svg>
 									</span>
 								</p>
-							</a>
+							</a> -->
 						</div>
 					</div>
 
@@ -153,13 +170,13 @@
 						<div class="content-interested__content">
 							<h3 class="content-interested__title">Book reviews</h3>
 							<p class="content-interested__text">I'm a slow reader. These are the few I managed to finish that shaped my thinking and understanding of my place in this world.</p>
-							<a class="content-interested__link" href="#">
+							<!-- <a class="content-interested__link" href="#">
 								<p class="content-interested__link-text">Check 'em out
 									<span class="content-interested__link-svg">
 										<svg fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="4" d="M9 5l7 7-7 7"></path></svg>
 									</span>
 								</p>
-							</a>
+							</a> -->
 						</div>
 					</div>
 
@@ -184,13 +201,13 @@
 						<div class="content-interested__content">
 							<h3 class="content-interested__title">Just do it</h3>
 							<p class="content-interested__text">Promotes the development of strong-willed qualities, self-organization. It teaches you to take a hit, to properly experience not only victories, but also defeats. The ability to analyze the causes of failures, to work on mistakes, to overcome the fear of failure is developed.</p>
-							<a class="content-interested__link" href="#">
+							<!-- <a class="content-interested__link" href="#">
 								<p class="content-interested__link-text">Let's go
 									<span class="content-interested__link-svg">
 										<svg fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="4" d="M9 5l7 7-7 7"></path></svg>
 									</span>
 								</p>
-							</a>
+							</a> -->
 						</div>
 					</div>
 
@@ -239,9 +256,6 @@
 	</div>
 </div>
 		</div>
-	</body>
-
-	<!-- Custom scripts adding -->
 
 	<!-- scripts adding -->
 	<script src="./js/theme.min.js"></script>
