--- a/about.html
+++ b/about.html
@@ -9,9 +9,8 @@
 
 	<link rel="stylesheet" href="./css/style.min.css">
 </head>
+
 <body>
-	
-	<body>
 		<div class="progressbar">
 	<div class="progressbar-line"></div>
 </div>
@@ -21,7 +20,7 @@
 	<nav class="nav">
 		<div class="logo">
 			<button class="logo-btn circle-btn logo-btn-back">
-				<p class="logo-text">VI</p>
+				<span	class="logo-text">VI</span>
 				<span class="span-arrow">
 					<svg class="btn-svg btn-svg-arrow" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path>
@@ -78,6 +77,23 @@
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18 3a3 3 0 0 0-3 3v12a3 3 0 0 0 3 3 3 3 0 0 0 3-3 3 3 0 0 0-3-3H6a3 3 0 0 0-3 3 3 3 0 0 0 3 3 3 3 0 0 0 3-3V6a3 3 0 0 0-3-3 3 3 0 0 0-3 3 3 3 0 0 0 3 3h12a3 3 0 0 0 3-3 3 3 0 0 0-3-3z"></path>
 				</svg>
 			</button>	
+			<!-- <div class="modal">
+				<div class="modal__inner">
+					<div class="modal-input">
+						<input class="modal-input__search" type="text" placeholder="Search...">
+					</div>
+					<div class="modal-items">
+						<div class="modal-item active">
+							<span class="modal-item__text ">Home</span>
+							<div class="modal-item__btn">h</div>
+						</div>
+						<div class="modal-item">
+							<span class="modal-item__text">Work</span>
+							<div class="modal-item__btn">w</div>
+						</div>
+					</div>
+				</div>
+			</div> -->
 		</div>
 	</nav>
 </header>
@@ -97,7 +113,7 @@
 
 			<div class="head head-work">
 				<h1 class="title">About</h1>
-				<h4 class="subtitle about-subtitle"><blockquote class="about-subtitle--cursive">"Intelligence is the ability to quickly adapt to change."</blockquote> ― Stephen Hawking</h4>
+				<h4 class="subtitle about-subtitle"><i>"Intelligence is the ability to quickly adapt to change."</i> ― Stephen Hawking</h4>
 			</div>
 
 			<div class="about-items">
@@ -109,28 +125,28 @@
 					<span class="about-item__text">Find me at:</span>
 					<ul class="about-social">
 						<li class="about-social__item">
-							<a class="about-social__link" href="#">
+							<a class="about-social__link" href="https://www.linkedin.com/in/ivan-iovchev-896802235/" target="_blank">
 								<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
 									<path d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"/>
 								</svg>
 							</a>
 						</li>
 						<li class="about-social__item">
-							<a class="about-social__link" href="#">
+							<a class="about-social__link"  href="https://www.instagram.com/iovch3v" target="_blank">
 								<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
 									<path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/>
 								</svg>
 							</a>
 						</li>
 						<li class="about-social__item">
-							<a class="about-social__link" href="#">
+							<a class="about-social__link" href="https://github.com/iovchev" target="_blank">
 								<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
 									<path d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"/>
 								</svg>
 							</a>
 						</li>
 						<li class="about-social__item">
-							<a class="about-social__link" href="#">
+							<a class="about-social__link" href="https://codepen.io/iovchev" target="_blank">
 								<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
 									<path d="M502.285 159.704l-234-156c-7.987-4.915-16.511-4.96-24.571 0l-234 156C3.714 163.703 0 170.847 0 177.989v155.999c0 7.143 3.714 14.286 9.715 18.286l234 156.022c7.987 4.915 16.511 4.96 24.571 0l234-156.022c6-3.999 9.715-11.143 9.715-18.286V177.989c-.001-7.142-3.715-14.286-9.716-18.285zM278 63.131l172.286 114.858-76.857 51.429L278 165.703V63.131zm-44 0v102.572l-95.429 63.715-76.857-51.429L234 63.131zM44 219.132l55.143 36.857L44 292.846v-73.714zm190 229.715L61.714 333.989l76.857-51.429L234 346.275v102.572zm22-140.858l-77.715-52 77.715-52 77.715 52-77.715 52zm22 140.858V346.275l95.429-63.715 76.857 51.429L278 448.847zm190-156.001l-55.143-36.857L468 219.132v73.714z"/>
 								</svg>
@@ -145,27 +161,61 @@
 			</div>
 
 			<h2 class="title-h5">First chapters</h2>
-			<h6 class="title-h5">Let`s connect!</h6>
-			<div class="about-text">
-				My social media channels are all over this website but here are two handy buttons so we can connect right away. Looking forward to meeting you!
+			<p class="subtitle">
+				It all started back in 1996. I was born in a provincial settlement called N, at a time when the appearance of a computer as a desktop device was only at dawn. From early childhood, and even in school days, I was a minor perfectionist and just a child who always sought to develop and receive more and more information. He led an active lifestyle and never sat still. I always liked to structure everything, to look for answers to the questions I received - on my own, without the help of other people. I devoted enough time to study, in particular to the exact sciences, as I understood that I wanted to connect my future with computer technology. After all, I dreamed of a computer ..
+			</p>
+			<p class="subtitle">
+				My parents were ordinary workers, without any privileges or anything. They were not strong in the field of trends and did not really understand what the future was behind these “machines”. I somehow started a conversation on the topic of buying a computer for me, but they flatly refused. From that moment on, I put aside all my savings to buy a computer. After a long time, being in the ninth grade, nevertheless, I managed to collect and purchase it. It was something..
+			</p>
+			<p class="subtitle">
+				By the time university was just around the corner, one of the more traditional courses didn't suit me. I was just sure that there would be no difficulties in entering the “Faculty of Information Technology”. And I thought, wow.. this is quite a promising specialty, and I think I will not lose. Therefore, while my classmates rushed about and ran about different educational institutions and applied for different specialties, I was only in one direction, which I wrote about above.
+			</p>
+			<h2 class="title-h5">Programming my life</h2>
+			<p class="subtitle">
+				As you understand, a student career is not the most rewarding path. Here he is not only greatly underestimated, but completely ignored from a financial point of view. It took me almost 3 years to understand that I would not work as a computer engineer (system administrator). In addition, it was not millet so. I realized that I just did not want to sink into the wilds of the routine of monotonous installation of workstations, connecting local networks and banal printer repairs, it would be too boring for me.
+			</p>
+			<p class="subtitle">
+				So, I dropped out for a fairly long period of time in search of myself, while simultaneously working in all sorts of jobs where I did not get any pleasure. I thought for a long time, and went to this question. What if I could still find myself in the IT field as a web developer, and it's not just starting over, but it's also a challenge for me, because I have programming experience in C, C ++, C #, Visual Basic at university? Yes, that's a cool idea! Since then I have started positioning myself as a (professional) web developer.
+			</p>
+			<p class="subtitle">
+				This site is meant for me in all these forms. You will find my experience, as well as random thoughts, alternative things that I like, and so on. So yes, sit back, cool off and explore it!
+			</p>
+			<h2 class="title-h5">Skills</h2>
+			<p class="subtitle">
+				During the creation of the product, modern development and optimization tools are used, such as: <b class="about-bold-text">HTML5</b>, <b class="about-bold-text">CSS3 (flex, grid)</b>, <b class="about-bold-text">SCSS</b>,	<b class="about-bold-text">JavaScript</b>, <b class="about-bold-text">jQuery</b>, <b class="about-bold-text">React.js</b>, <b class="about-bold-text">Svg</b>, <b class="about-bold-text">BEM metodology</b>, <b class="about-bold-text">Tailwind CSS framework</b>, <b class="about-bold-text">Gulp/Webpack</b>, <b class="about-bold-text">Responsive/Adaptive layouts</b>.
+			</p>
+			<h2 class="title-h5">About this website</h2>
+			<p class="subtitle">
+				You might think by looking at this website that I have a clear understanding of what's going on here but, I assure you, I don't. I'm just figuring out how to do actual tech while building things. Thank goodness for the world wide web where I've learned mostly everything for free and, at times, by searching until page 3 of Google.</p>
+			<div class="subtitle">
+				This site is built using <b class="about-bold-text">JavaScript native</b>, styled mostly with <b class="about-bold-text">CSS</b>(preprocessor <b class="about-bold-text">SCSS</b>) and compiled with <b class="about-bold-text">Gulp</b>.
 			</div>
+			<h2 class="title-h5">Let's connect!</h2>
+			<p class="subtitle">
+				My social media channels are all over this website but here are two handy buttons so we can connect right away. Looking forward to meeting you!
+			</p>
 			<div class="about-buttons">
 
 				<div class="about-btn">
 					<a class="about-btn__link" href="mailto:iovch3vv@gmail.com">
 						<span class="about-span">
-							<svg class="about-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"></path><path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"></path></svg>
+							<svg class="about-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+								<path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"></path>
+								<path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"></path>
+							</svg>
 						</span>
 						Drop a note
 					</a>
 				</div>
 
 				<div class="about-btn">
-					<a class="about-btn__link" href="mailto:iovch3vv@gmail.com">
+					<a class="about-btn__link" href="https://t.me/iovchev" target="_blank">
 						<span class="about-span">
-							<svg class="about-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"></path><path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"></path></svg>
+							<svg class="about-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
+								<path d="M248,8C111.033,8,0,119.033,0,256S111.033,504,248,504,496,392.967,496,256,384.967,8,248,8ZM362.952,176.66c-3.732,39.215-19.881,134.378-28.1,178.3-3.476,18.584-10.322,24.816-16.948,25.425-14.4,1.326-25.338-9.517-39.287-18.661-21.827-14.308-34.158-23.215-55.346-37.177-24.485-16.135-8.612-25,5.342-39.5,3.652-3.793,67.107-61.51,68.335-66.746.153-.655.3-3.1-1.154-4.384s-3.59-.849-5.135-.5q-3.283.746-104.608,69.142-14.845,10.194-26.894,9.934c-8.855-.191-25.888-5.006-38.551-9.123-15.531-5.048-27.875-7.717-26.8-16.291q.84-6.7,18.45-13.7,108.446-47.248,144.628-62.3c68.872-28.647,83.183-33.623,92.511-33.789,2.052-.034,6.639.474,9.61,2.885a10.452,10.452,0,0,1,3.53,6.716A43.765,43.765,0,0,1,362.952,176.66Z" fill="currentColor"/>
+							</svg>
 						</span>
-						Drop a note
+						Send a DM
 					</a>
 				</div>
 			</div>
@@ -212,9 +262,6 @@
 	</div>
 </div>
 		</div>
-	</body>
-
-	<!-- Custom scripts adding -->
 
 	<!-- scripts adding -->
 	<script src="./js/theme.min.js"></script>
@@ -222,6 +269,5 @@
 	<script src="./js/progress.min.js"></script>
 	<script src="./js/btn-back.min.js"></script>
 	<script src="./js/breadcrumbs.min.js"></script>
-
 </body>
 </html>
