--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <title>Vania Iovchev | Web-Developer</title>
     <link rel="stylesheet" href="./css/style.min.css">
+
 </head>
 
 <body>
@@ -18,7 +19,7 @@
 	<nav class="nav">
 		<div class="logo">
 			<button class="logo-btn circle-btn logo-btn-back">
-				<p class="logo-text">VI</p>
+				<span	class="logo-text">VI</span>
 				<span class="span-arrow">
 					<svg class="btn-svg btn-svg-arrow" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path>
@@ -75,6 +76,23 @@
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18 3a3 3 0 0 0-3 3v12a3 3 0 0 0 3 3 3 3 0 0 0 3-3 3 3 0 0 0-3-3H6a3 3 0 0 0-3 3 3 3 0 0 0 3 3 3 3 0 0 0 3-3V6a3 3 0 0 0-3-3 3 3 0 0 0-3 3 3 3 0 0 0 3 3h12a3 3 0 0 0 3-3 3 3 0 0 0-3-3z"></path>
 				</svg>
 			</button>	
+			<!-- <div class="modal">
+				<div class="modal__inner">
+					<div class="modal-input">
+						<input class="modal-input__search" type="text" placeholder="Search...">
+					</div>
+					<div class="modal-items">
+						<div class="modal-item active">
+							<span class="modal-item__text ">Home</span>
+							<div class="modal-item__btn">h</div>
+						</div>
+						<div class="modal-item">
+							<span class="modal-item__text">Work</span>
+							<div class="modal-item__btn">w</div>
+						</div>
+					</div>
+				</div>
+			</div> -->
 		</div>
 	</nav>
 </header>
@@ -237,14 +255,10 @@
 	</ul>
 </div>
 	</div>
+
+	<script src="./js/theme.min.js"></script>
+	<script src="./js/burger-menu.js"></script>
+	<script src="./js/btn-back.min.js"></script>
+	<script src="./js/content-animation.min.js"></script>
 </body>
-
-<!-- Custom scripts adding -->
-
-<!-- scripts adding -->
-<script src="./js/theme.min.js"></script>
-<script src="./js/burger-menu.js"></script>
-<script src="./js/btn-back.min.js"></script>
-<script src="./js/content-animation.min.js"></script>
-
 </html>
