--- a/my-world.html
+++ b/my-world.html
@@ -258,10 +258,11 @@
 		</div>
 
 	<!-- scripts adding -->
-	<script src="./js/theme.min.js"></script>
-	<script src="./js/burger-menu.js"></script>
-	<script src="./js/progress.min.js"></script>
-	<script src="./js/btn-back.min.js"></script>
-	<script src="./js/breadcrumbs.min.js"></script>
+	<!-- scripts adding -->
+	<script src="./js/theme.min.js" async></script>
+	<script src="./js/breadcrumbs.min.js" async></script>
+	<script src="./js/progress.min.js" defer></script>
+	<script src="./js/burger-menu.js" defer></script>
+	<script src="./js/btn-back.min.js" defer></script>
 </body>
 </html>
