--- a/work.html
+++ b/work.html
@@ -129,7 +129,7 @@
 						<div class="work-item__content">
 							<h6 class="work-item__title">Portfolio | Michael Scofield</h6>
 							<p class="work-item__subtitle">Complex portfolio site project. The level of implementation of layout and scripts is high.</p>
-							<a class="work-item__link" href="#">
+							<a class="work-item__link" href="https://iovchev.github.io/layotPortfolioWeb/" target="_blank">
 								<p class="work-item__btn">Visite website
 									<span class="work-item__svg">
 										<svg fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="4" d="M9 5l7 7-7 7"></path></svg>
@@ -143,12 +143,12 @@
 				<div class="work-item">
 					<div class="work-inner">
 						<div class="work-item__img">
-							<img src="img/work/aperture.jpg" alt="">
+							<img src="img/work/aperture.jpeg" alt="">
 						</div>
 						<div class="work-item__content">
 							<h6 class="work-item__title">Photo Studio "Aperture"</h6>
 							<p class="work-item__subtitle">Site-business cards for a photo studio. Excellent minimalistic design and concise functionality.</p>
-							<a class="work-item__link" href="#">
+							<a class="work-item__link" href="https://iovchev.github.io/aperture.github.io/" target="_blank">
 								<p class="work-item__btn">Visite website
 									<span class="work-item__svg">
 										<svg fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="4" d="M9 5l7 7-7 7"></path></svg>
@@ -162,12 +162,12 @@
 				<div class="work-item">
 					<div class="work-inner">
 						<div class="work-item__img">
-							<img src="img/work/auto.jpg" alt="">
+							<img src="img/work/auto.jpeg" alt="">
 						</div>
 						<div class="work-item__content">
 							<h6 class="work-item__title">Project "AutoExpress"</h6>
 							<p class="work-item__subtitle">Website for the implementation of transportation of cars. Simple, functional landing page with interactive animation.</p>
-							<a class="work-item__link" href="#">
+							<a class="work-item__link" href="https://iovchev.github.io/project-car-transportation-of-USA-/" target="_blank">
 								<p class="work-item__btn">Visite website
 									<span class="work-item__svg">
 										<svg fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="4" d="M9 5l7 7-7 7"></path></svg>
@@ -181,12 +181,12 @@
 				<div class="work-item">
 					<div class="work-inner">
 						<div class="work-item__img">
-							<img src="img/work/form.jpg" alt="">
+							<img src="img/work/form.jpeg" alt="">
 						</div>
 						<div class="work-item__content">
 							<h6 class="work-item__title">Project "GAO"</h6>
 							<p class="work-item__subtitle">High level of implementation of the GAO company registration form. Functional layout with interactive.</p>
-							<a class="work-item__link" href="#">
+							<a class="work-item__link" href="https://iovchev.github.io/formRegistration/" target="_blank">
 								<p class="work-item__btn">Checked form
 									<span class="work-item__svg">
 										<svg fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="4" d="M9 5l7 7-7 7"></path></svg>
@@ -205,7 +205,7 @@
 						<div class="work-item__content">
 							<h6 class="work-item__title">Project "Marketing"</h6>
 							<p class="work-item__subtitle">A simple implementation of a business card website for a marketing company. Responsive and cross-browser layout.</p>
-							<a class="work-item__link" href="#">
+							<a class="work-item__link" href="https://iovchev.github.io/marketing.githib.io/" target="_blank">
 								<p class="work-item__btn">Visite website
 									<span class="work-item__svg">
 										<svg fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="4" d="M9 5l7 7-7 7"></path></svg>
@@ -262,11 +262,12 @@
 		</div>
 
 	<!-- scripts adding -->
-	<script src="./js/theme.min.js"></script>
-	<script src="./js/burger-menu.js"></script>
-	<script src="./js/progress.min.js"></script>
-	<script src="./js/btn-back.min.js"></script>
-	<script src="./js/breadcrumbs.min.js"></script>
+	<!-- scripts adding -->
+	<script src="./js/theme.min.js" async></script>
+	<script src="./js/breadcrumbs.min.js" async></script>
+	<script src="./js/progress.min.js" defer></script>
+	<script src="./js/burger-menu.js" defer></script>
+	<script src="./js/btn-back.min.js" defer></script>
 
 </body>
 </html>
