--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 					</span>
 				</a>
 			</div>
-			<h1 class="content__title">G'day, how's it going?</h1>
+			<h1 class="content__title">G'day － how's it going? 👋</h1>
 			<div class="content__text">
 				I'm <span class="bold-text">Vania Iovchev</span>, an creator & developer. Everyday, I`m work on creating interactive user interfaces with simple tools, in the field of web technologies, which are always focused on <span class="text-cursive">speed</span>, <span class="text-cursive">ease of use</span> and <span class="text-cursive">functional extensibility</span>.
 			</div>
@@ -138,7 +138,7 @@
 						<div class="work-item__content">
 							<h6 class="work-item__title">Portfolio | Michael Scofield</h6>
 							<p class="work-item__subtitle">Complex portfolio site project. The level of implementation of layout and scripts is high.</p>
-							<a class="work-item__link" href="#">
+							<a class="work-item__link" href="https://iovchev.github.io/layotPortfolioWeb/" target="_blank">
 								<p class="work-item__btn">Visite website
 									<span class="work-item__svg">
 										<svg fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="4" d="M9 5l7 7-7 7"></path></svg>
@@ -152,12 +152,12 @@
 				<div class="work-item">
 					<div class="work-inner">
 						<div class="work-item__img">
-							<img src="img/work/aperture.jpg" alt="">
+							<img src="img/work/aperture.jpeg" alt="">
 						</div>
 						<div class="work-item__content">
 							<h6 class="work-item__title">Photo Studio "Aperture"</h6>
 							<p class="work-item__subtitle">Site-business cards for a photo studio. Excellent minimalistic design and concise functionality.</p>
-							<a class="work-item__link" href="#">
+							<a class="work-item__link" href="https://iovchev.github.io/aperture.github.io/" target="_blank">
 								<p class="work-item__btn">Visite website
 									<span class="work-item__svg">
 										<svg fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="4" d="M9 5l7 7-7 7"></path></svg>
@@ -171,12 +171,12 @@
 				<div class="work-item">
 					<div class="work-inner">
 						<div class="work-item__img">
-							<img src="img/work/auto.jpg" alt="">
+							<img src="img/work/auto.jpeg" alt="">
 						</div>
 						<div class="work-item__content">
 							<h6 class="work-item__title">Project "AutoExpress"</h6>
 							<p class="work-item__subtitle">Website for the implementation of transportation of cars. Simple, functional landing page with interactive animation.</p>
-							<a class="work-item__link" href="#">
+							<a class="work-item__link" href="https://iovchev.github.io/project-car-transportation-of-USA-/" target="_blank">
 								<p class="work-item__btn">Visite website
 									<span class="work-item__svg">
 										<svg fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="4" d="M9 5l7 7-7 7"></path></svg>
@@ -256,9 +256,9 @@
 </div>
 	</div>
 
-	<script src="./js/theme.min.js"></script>
-	<script src="./js/burger-menu.js"></script>
-	<script src="./js/btn-back.min.js"></script>
-	<script src="./js/content-animation.min.js"></script>
+	<script src="./js/theme.min.js" async></script>
+	<script src="./js/burger-menu.js" defer></script>
+	<script src="./js/btn-back.min.js" defer></script>
+	<script src="./js/content-animation.min.js" defer></script>
 </body>
 </html>
